artifacts/shared-gw/web-frontend-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-frontend
spec:
  hostnames:
  - customers-frontend.esuez.org
  parentRefs:
  - name: eg
  rules:
  - backendRefs:
    - name: web-frontend
      port: 80
